force-app/main/default/objects/Cal_Calendar__c/Cal_Calendar__c.object-meta.xml
<CustomObject>
    <description>Defines a calendar: which SObject it reads, how that object's fields map to the generic event model, and calendar-wide color rules. Display-chrome preferences live on Cal_User_Preferences__c, not here.</description>
    <label>Calendar</label>
    <nameField>
        <label>Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendars</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>