force-app/main/default/objects/Cal_Calendar__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Inactive calendars are never queried and are hidden from the picker.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>