force-app/main/default/objects/Cal_Calendar__c/fields/Color_Rules__c.field-meta.xml
<CustomField>
    <fullName>Color_Rules__c</fullName>
    <description>JSON color-rules object: {&quot;rules&quot;:[{&quot;key&quot;,&quot;operator&quot;,&quot;value&quot;,&quot;color&quot;,&quot;label&quot;}],&quot;defaultColor&quot;}. Each rule key must match a Field Config key.</description>
    <label>Color Rules (JSON)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>