force-app/main/default/objects/Cal_Calendar__c/fields/Default_Color__c.field-meta.xml
<CustomField>
    <fullName>Default_Color__c</fullName>
    <defaultValue>"#1b96ff"</defaultValue>
    <description>Hex color (#rrggbb) used for this calendars events when no color rule matches.</description>
    <label>Default Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>