force-app/main/default/objects/Cal_Calendar__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Shown as helptext in the calendar picker.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>