force-app/main/default/objects/Cal_Calendar__c/fields/Field_Config__c.field-meta.xml
<CustomField>
    <fullName>Field_Config__c</fullName>
    <description>JSON array of extra fields to show on events. Each entry: {&quot;key&quot;,&quot;source&quot;,&quot;label&quot;,&quot;showLabel&quot;,&quot;views&quot;,&quot;truncate&quot;}. &quot;source&quot; is the field API name to query (dot paths allowed); defaults to &quot;key&quot;.</description>
    <label>Field Config (JSON)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>