force-app/main/default/objects/Cal_Calendar__c/fields/Field_Mappings__c.field-meta.xml
<CustomField>
    <fullName>Field_Mappings__c</fullName>
    <description>JSON mapping base event fields to source field API names: {"title","start","end","allDay","recordId"}. title and start are required.</description>
    <label>Field Mappings (JSON)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>