force-app/main/default/objects/Cal_Calendar__c/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <description>Optional SOQL WHERE fragment (no leading WHERE). Placeholders $CURRENT_USER_ID, $RANGE_START, $RANGE_END expand to bind variables. Admin-authored.</description>
    <label>Filter Criteria</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>