force-app/main/default/objects/Cal_Calendar__c/fields/Row_Limit__c.field-meta.xml
<CustomField>
    <fullName>Row_Limit__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Maximum records this calendar returns for a visible range. Clamped to a hard cap at runtime.</description>
    <label>Row Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>