force-app/main/default/objects/Cal_Calendar__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>API name of the SObject this calendar reads, e.g. Event, Task, Opportunity.</description>
    <label>Target Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>