force-app/main/default/objects/Cal_Calendar__c/validationRules/Default_Color_Is_Hex.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Color_Is_Hex</fullName>
    <active>true</active>
    <description>Default Color must be a #rrggbb hex value.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Default_Color__c)),
  NOT(REGEX(Default_Color__c, &quot;^#[0-9A-Fa-f]{6}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Default_Color__c</errorDisplayField>
    <errorMessage>Default Color must be a hex value like #1b96ff.</errorMessage>
</ValidationRule>