force-app/main/default/objects/Cal_Calendar__c/listViews/My_Calendars.listView-meta.xml
<ListView>
    <fullName>My_Calendars</fullName>
    <columns>NAME</columns>
    <columns>Target_Object__c</columns>
    <columns>Visibility__c</columns>
    <columns>Active__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Calendars</label>
</ListView>