force-app/main/default/objects/Cal_Calendar__c/listViews/Public_Calendars.listView-meta.xml
<ListView>
    <fullName>Public_Calendars</fullName>
    <columns>NAME</columns>
    <columns>Target_Object__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visibility__c</field>
        <operation>equals</operation>
        <value>Public</value>
    </filters>
    <label>Public Calendars</label>
</ListView>